El primer commmit

--- a/app/src/app/pages/facturacion/facturacion.component.html
+++ b/app/src/app/pages/facturacion/facturacion.component.html
@@ -17,7 +17,7 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th  scope="col">Guia</th>
+                    <th  scope="col">Guía</th>
                     <th  scope="col">Descripcion</th>
                     <th  scope="col">nave</th>
                     <th  scope="col">Puerto</th>
