--- a/app/src/app/shared/sidebar/sidebar.component.html
+++ b/app/src/app/shared/sidebar/sidebar.component.html
@@ -4,46 +4,52 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Inicio</div>
-                    <a class="nav-link" routerLink="/dashboard">
+                    <a class="nav-link puntero" routerLink="/dashboard">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Dashboard
                     </a>
-                    <a class="nav-link" routerLink="despachos">
+                    <a class="nav-link puntero" routerLink="despachos">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-box"></i></div>
                         Despachos
                     </a>
-                    <a class="nav-link" routerLink="cliente">
+                 
+               
+
+                    <div class="sb-sidenav-menu-heading">Supervision</div>
+                    <a class="nav-link puntero" routerLink="cliente">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-user-tie"></i></div>
                         Clientes
                     </a>
-                    <a class="nav-link" routerLink="conductor">
+                    <a class="nav-link puntero" routerLink="conductor">
                         <div class="sb-nav-link-icon"><i class="fa-regular fa-id-card"></i></div>
                         Conductor
                     </a>
-                    <a class="nav-link" routerLink="vehiculos">
+                    <a class="nav-link puntero" routerLink="vehiculos">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-fast"></i></div>
                         Vehiculos
                     </a>
 
-               
-
-                    <div class="sb-sidenav-menu-heading">Supervision</div>
-                   <a class="nav-link" routerLink="facturas">
+                   <a class="nav-link puntero" routerLink="facturas">
                          <div class="sb-nav-link-icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
                         PreFacturas
                     </a>
-                    <a class="nav-link" routerLink="facturacion">
+                    <a class="nav-link puntero" routerLink="facturacion">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
                        Facturación
                    </a>
+                   <a class="nav-link puntero" routerLink="puerto">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-ferry"></i></div>
+                   Puertos
+               </a>
+                   
                   
                     <div class="sb-sidenav-menu-heading">Administrar</div>
-                    <a class="nav-link" routerLink="usuarios">
+                    <a class="nav-link puntero" routerLink="usuarios">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                         Usuarios
                     </a>
 
-                    <a class="nav-link" routerLink="tarifa">
+                    <a class="nav-link puntero" routerLink="tarifa">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                         Tarifas
                     </a>
